--- a/config.json
+++ b/config.json
@@ -1,13 +1,21 @@
 {
-    "__comment__": "这是注释",
-    "version": "v1.4-Beta",
+    "__comment__": "这是注释，注意，FPS 10帧以下必定崩溃，因为我写的很多函数都是int（），容易出现小数变成 0 无法被除的错误，其他帧数自测；自定义地图想恢复只需要改回原来预设地图之一就可以了",
+    "version": "v1.4.4-Beta",
     "height": 800,
     "width": 800,
     "FPS": 60,
-    "volume": 0.5,
+    "volume": 0.0,
     "map_size": [
         10,
         10
     ],
-    "bomb_number": 5
+    "bomb_number": 5,
+    "player_names": [
+        "未命名"
+    ],
+    "player_name_index": 0,
+    "rank_default": [
+        30,
+        30
+    ]
 }
